[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "REaLTabFormer"
dynamic = ["version"]
authors = [
  { name="Aivin V. Solatorio", email="asolatorio@worldbank.org" },
]
description = "A novel method for generating tabular and relational data using language models."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "REaLTabFormer", "deep learning", "tabular data",
    "transformers", "data generation", "seq2seq model",
    "synthetic data", "pytorch", "language models",
    "synthetic data generation"
]
dependencies = [
    "datasets >= 2.6.1",
    "numpy >= 1.21.6",  # "numpy >= 1.23.4",
    "pandas >= 1.3.5",  # "pandas >= 1.5.1",
    "scikit_learn >= 1.0.2",  # "scikit_learn >= 1.1.3",
    "torch >= 1.13.0",
    "tqdm >= 4.64.1",
    "transformers >= 4.24.0",
    "shapely >= 1.8.5.post1",
]

[project.urls]
"Homepage" = "https://github.com/avsolatorio/REaLTabFormer"
"Documentation" = "https://avsolatorio.github.io/REaLTabFormer/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
# version = {attr = "realtabformer.__version__"}
version = {file = "src/realtabformer/VERSION"}
