[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "REaLTabFormer"
description = "A novel method for generating tabular and relational data using language models."
authors = ["Aivin V. Solatorio <asolatorio@worldbank.org>"]
readme = "README.md"
license = "MIT"
version = "0.2.3"
homepage = "https://github.com/avsolatorio/REaLTabFormer"
documentation = "https://worldbank.github.io/REaLTabFormer/"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

keywords = [
    "REaLTabFormer", "deep learning", "tabular data",
    "transformers", "data generation", "seq2seq model",
    "synthetic data", "pytorch", "language models",
    "synthetic data generation"
]

[tool.poetry.dependencies]
python = ">=3.8"
datasets = ">=2.6.1"
numpy = ">=1.21.6"  # ">=1.23.4"
pandas = ">=1.3.5"  # ">=1.5.1"
scikit-learn = ">=1.0.2"  # ">=1.1.3"
tqdm = ">=4.64.1"
transformers = {extras = ["torch", "sentencepiece"], version = ">=4.46.0"}
shapely = ">=1.8.5.post1"

[tool.poetry.urls]
Homepage = "https://github.com/avsolatorio/REaLTabFormer"
Documentation = "https://avsolatorio.github.io/REaLTabFormer/"

[tool.poetry.scripts]
realtabformer = "realtabformer:main"

[tool.poetry_bumpversion.file."src/realtabformer/VERSION"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.2"
isort = "^5.13.2"
black = "^24.4.2"
bandit = "^1.7.9"
trufflehog = "^2.2.1"
pytest-mock = "^3.14.0"
